--- a/manifest.json
+++ b/manifest.json
@@ -7,19 +7,21 @@
     "tabs",
     "bookmarks",
     "unlimitedStorage",
-    "nativeMessaging"
+    "nativeMessaging",
+    "activeTab",
+    "storage"
   ],
   "action": {
     "default_popup": "popup.html",
     "default_icon": {
-      "16": "images/icon16.png",
-      "48": "images/icon48.png",
-      "128": "images/icon128.png"
+      "16": "./images/icon48.png",
+      "48": "./images/icon48.png",
+      "128": "./images/icon48.png"
     }
   },
   "icons": {
-    "16": "images/icon16.png",
-    "48": "images/icon48.png",
-    "128": "images/icon128.png"
+    "16": "./images/icon48.png",
+    "48": "./images/icon48.png",
+    "128": "./images/icon128.png"
   }
 }
